# PongNeural-oldstash

./: CMakeLists.txt  README.md
assets/: Ball.fragmentshader  Ball.vertexshader  Pong.fragmentshader  Pong.vertexshader  Score.fragmentshader
cmake/modules/: Findasio.cmake
src/: aicontroller.cpp  aicontroller.h  assetloader.cpp  assetloader.h  ball.cpp  ball.h  controller.cpp  controller.h  definitions.h  game.cpp  game.h  inputmanager.cpp  inputmanager.h  ipongcollidable.cpp  ipongcollidable.h  keyboardcontroller.cpp  keyboardcontroller.h  main.cpp  map.cpp  map.h  mesh.cpp  mesh.h  platform.cpp  platform.h  pongcontactlistener.cpp  pongcontactlistener.h  score.cpp  score.h  sensor.cpp  sensor.h  wall.cpp  wall.h  world.cpp  world.h
src/neural/: gen.cpp  gen.h  genome.cpp  genome.h  network.cpp  network.h  neuralcontroller.cpp  neuralcontroller.h  neuraldefinitions.cpp  neuraldefinitions.h  neuralinput.cpp  neuralinput.h  neuron.cpp  neuron.h  pool.cpp  pool.h  species.cpp  species.h
